Add getCategory endpoint
